index.html ver--1

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-our website is running or not!!!
+welcome to the details page !!!!
+<html>
+	<head>
+		<style>
+ 			 h1 {color:red;}
+		</style>
+	<head>
+	<body>
+		<p style="font-size:14px; color:#538b01; font-weight:bold; font-style:italic;">RAJ,RUTIK,HRISHI</p>
+	<body>
+<html>
+
