index.html ver--2

--- a/index.html
+++ b/index.html
@@ -10,3 +10,39 @@ welcome to the details page !!!!
 	<body>
 <html>
 
+	<!DOCTYPE html>
+<html>
+<head>
+	<title>WEBI................</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<body>
+   <div class="smoke" >
+        <ul>
+            <li><img src="logo.png"></li>
+            <li>s</li>
+            <li>t</li>
+            <li>a</li>
+            <li>c</li>
+            <li>k</li>
+            <li>f</li>
+            <li>i</li>
+            <li>n</li>
+            <li>d</li>
+            <li>o</li>
+            <li>v</li>
+            <li>e</li>
+            <li>r</li>
+        </ul>
+        <div class="thankyousec">
+            <div class="colmun-grid">
+                <div class="logo-stack">
+                    <img src="logo-stack.png">
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
