inde.html ver--9

--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<html>
-    <title>webiiiiiiii..........</title>
-        <head>
-            <font size="+3"><marquee> <h1 style="color:rgb(225, 0, 255); font-style:Arial; text-align:center"> welcome in student details page !!!</h1></marquee>  </font>
-                <style>
-                        body {
-  background-color: black;
-  font-family: cursive;
-}
-
-.glow {
-  font-size: 80px;
-  color: #fff;
-  text-align: center;
-  animation: glow 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
-}
-                </style>
-        </head>
-        <body  style="background-color:rgb(10, 10, 10);">
-                <h3 class="glow"><p style="font-size:50px; color:#ff0000; font-weight:bold;">RAJ--7010</p></h3>
-                <h3 class="glow"><p style="font-size:50px; color:#ff0000; font-weight:bold;">RUTIK--7011</p></h3>
-                <h3 class="glow"><p style="font-size:50px; color:#ff0000; font-weight:bold;">HRISHI--7036</p></h3>
-        </body>
-</html> 
+hello to all of you!!!!
